--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "next": "14.2.23",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^15.1.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "eslint": "^8",
+    "eslint": "^9.19.0",
     "eslint-config-next": "14.2.23",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
